--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "style-dictionary": "^2.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "semantic-release": "^17.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
