--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ jobs:
       after_success:
 
         # run semantic release
-        # - npm run semantic-release
+        - npm run semantic-release
