--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "semantic-release": "^17.0.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
