--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "style-dictionary": "^2.8.3"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
     "semantic-release": "^17.0.4"
   },
   "scripts": {
