--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "style-dictionary": "^2.8.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
+    "husky": "^4.2.3",
     "semantic-release": "^17.0.4"
   },
   "scripts": {
