--- a/.releaserc
+++ b/.releaserc
@@ -15,6 +15,16 @@
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
-    "@semantic-release/github"
+    "@semantic-release/github",
+    [
+      "semantic-release-slack-bot",
+      {
+        "notifyOnSuccess": true,
+        "notifyOnFail": true,
+        "onSuccessTemplate": {
+          "text": "A new version of $package_name has been released: $npm_package_version"
+        }
+      }
+    ]
   ]
 }
