--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "husky": "^4.2.3",
-    "semantic-release": "^17.0.4"
+    "semantic-release": "^17.0.4",
+    "semantic-release-slack-bot": "^1.6.1"
   },
   "scripts": {
     "semantic-release": "semantic-release"
