--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "semantic-release": "^17.0.4",
     "semantic-release-slack-bot": "^1.6.1"
   },
+  "files": [
+    "build/"
+  ],
   "scripts": {
     "semantic-release": "semantic-release"
   },
