--- a/.releaserc
+++ b/.releaserc
@@ -6,7 +6,9 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",
+    ["@semantic-release/npm", {
+      "pkgRoot": "build"
+    }],
     ["@semantic-release/git", {
       "assets": [
         "package.json",
