fix: remove build folder, build in dist folder

--- a/.releaserc
+++ b/.releaserc
@@ -6,9 +6,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    ["@semantic-release/npm", {
-      "pkgRoot": "build"
-    }],
+    "@semantic-release/npm",
     ["@semantic-release/git", {
       "assets": [
         "package.json",
