--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jobs:
       script:
 
         # build style dictionaries
-        - ./node_modules/style-dictionary/bin/style-dictionary build
+        - npm run build
       after_success:
 
         # run semantic release
