--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@prantlf/jsonlint": "^10.2.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
@@ -21,6 +22,7 @@
   ],
   "scripts": {
     "build": "./node_modules/style-dictionary/bin/style-dictionary build",
+    "jsonlint": "./node_modules/@prantlf/jsonlint/lib/cli.js -q ./properties/**/*.json",
     "semantic-release": "semantic-release"
   },
   "repository": {
