--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ jobs:
     - stage: build, test and deploy packages and storybook for production
       script:
 
+        # lint
+        - npm run jsonlint
+
         # build style dictionaries
         - npm run build
       after_success:
