feat: add umd exports for javascript output target

--- a/config.json
+++ b/config.json
@@ -32,6 +32,10 @@
         {
           "destination": "tokens.flat.json",
           "format": "json/flat"
+        },
+        {
+          "destination": "tokens.umd.js",
+          "format": "javascript/umd"
         }
       ]
     },
