fix: make sure js output target is correctly transformed

--- a/config.json
+++ b/config.json
@@ -36,7 +36,7 @@
       }]
     },
     "js": {
-      "transformGroup": "web",
+      "transformGroup": "js",
       "buildPath": "dist/js/",
       "files": [
         {
