--- a/templates/web-scss.template
+++ b/templates/web-scss.template
@@ -2,7 +2,7 @@
 <% _.each(allProperties, function(prop) {
   var output = "";
   if(prop.deprecated) {
-  output += "// Notice: the following value is deprecated";
+  output += "// Notice: " + prop.name + " is deprecated";
       if(prop.deprecated_comment) {
       output += " (" + prop.deprecated_comment + ")";
       }
