--- a/.releaserc
+++ b/.releaserc
@@ -22,7 +22,7 @@
         "notifyOnSuccess": true,
         "notifyOnFail": true,
         "onSuccessTemplate": {
-          "text": "A new version of `$package_name` has been released: `$npm_package_version`"
+          "text": "`$package_name`: `$npm_package_version`"
         }
       }
     ]
