chore: git add colors.js after build

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ jobs:
     script:
     - npm run lint
     - npm run build
+    - git add properties/color.json
+    - git commit -m "fix: figma library update"
+    - git push origin master
 
     after_success:
     - npm run semantic-release
