--- a/.releaserc
+++ b/.releaserc
@@ -11,7 +11,8 @@
       "assets": [
         "package.json",
         "package-lock.json",
-        "CHANGELOG.md"
+        "CHANGELOG.md",
+        "properties/color.json"
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
