fix: try to push properties file back to repo

--- a/.releaserc
+++ b/.releaserc
@@ -11,8 +11,7 @@
       "assets": [
         "package.json",
         "package-lock.json",
-        "CHANGELOG.md",
-        "properties/color.json"
+        "CHANGELOG.md"
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
