--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "semantic-release": "^17.0.8",
     "semantic-release-slack-bot": "^1.6.2",
     "shelljs": "~0.8.4",
+    "simple-git": "~2.19.0",
     "sketch-constructor": "^1.20.1"
   },
   "files": [
