--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "npm run figma:extract && npm run build:stiledictionary",
     "build:stiledictionary": "node ./build.js",
     "figma:extract": "node figmaExtractor/figmaExtractor.js",
-    "lint": "npm run lint:yml",
+    "lint": "npm run lint:yml && npm run lint:js",
+    "lint:js": "eslint ./ --ext .js",
     "lint:yml": "eslint ./ --ext .yml,.yaml",
     "semantic-release": "semantic-release"
   },
