--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
     script:
     - npm run lint
     - npm run build
-    - node ci/gitPushProperties.js
+    - node ci/gitPushProperties.js -message ${message}
 
     after_success:
     - npm run semantic-release
