--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
     script:
     - npm run lint
     - npm run build
-    - node ci/gitPushProperties.js -m %{message}
+    - node ci/gitPushProperties.js -m $TRAVIS_COMMIT_MESSAGE
 
     after_success:
     - npm run semantic-release
