fix: get travis commit message for job id from api

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
     script:
     - npm run lint
     - npm run build
-    - node ci/gitPushProperties.js -m "$TRAVIS_COMMIT_MESSAGE"
+    - node ci/gitPushProperties.js -i "$TRAVIS_JOB_ID"
 
     after_success:
     - npm run semantic-release
