--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ jobs:
 
     after_success:
     - npm run semantic-release
-    - ./ci/triggerLyneDocumentation.sh
+    - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID"
