--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ notifications:
 jobs:
   include:
   - script:
+    - echo 'First'
     - npm run lint
     - npm run build:tokens
     - node ci/gitPushProperties.js -i "$TRAVIS_BUILD_ID"
@@ -21,3 +22,6 @@ jobs:
     after_success:
     - npm run semantic-release
     - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID"
+
+  - script:
+    - echo 'Second'
