--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,5 @@ jobs:
     - stage: build and deploy icons
       if: env(TYPE) = icons OR NOT env(TYPE)
       script:
-      - echo 'Second'
+      - npm run lint
+      - npm run icons:extract
