chore: install lyne config for eslint, remove json eslint plugin

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "axios": "~0.20.0",
     "dotenv": "~8.2.0",
     "eslint": "^7.0.0",
-    "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-yaml": "^0.3.0",
     "husky": "^4.2.5",
     "lodash": "^4.17.15",
+    "lyne-helper-eslint-config": "~1.0.1",
     "lyne-helper-trigger-travis": "~1.0.1",
     "minimist": "~1.2.5",
     "semantic-release": "^17.0.8",
