--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Managing and publishing design tokens for the lyne design system: https://github.com/lyne-design-system/lyne-components",
   "main": "index.js",
   "dependencies": {
+    "lyne-helper-figma-api": "~1.0.4",
     "style-dictionary": "^2.10.0"
   },
   "devDependencies": {
