--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,14 @@ jobs:
   include:
     - stage: build and deploy design tokens
       script:
-      - npm run lint
-      - npm run build:tokens
-      - node ci/gitPushProperties.js -i "$TRAVIS_BUILD_ID"
+      - npm run lint || travis_terminate 1
+      - npm run build:tokens || travis_terminate 1
+      - node ci/gitPushProperties.js -i "$TRAVIS_BUILD_ID" || travis_terminate 1
 
       after_success:
-      - npm run semantic-release
-      - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID" -j $(< .version)
+      - npm run semantic-release || travis_terminate 1
+      - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID" -j $(< .version) || travis_terminate 1
+
+      # prepare git for pushes
+      - git remote set-url origin https://lyne-design-system:$GH_TOKEN@github.com/lyne-design-system/lyne-design-tokens.git || travis_terminate 1
+      - ./ci/deploy_cdn_assets.sh
