--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "husky": "^6.0.0",
     "lodash": "^4.17.15",
     "lyne-helper-eslint-config": "~1.0.1",
-    "lyne-helper-figma-api": "~1.1.3",
     "lyne-helper-trigger-travis": "~1.0.3",
     "minimist": "~1.2.5",
     "netlify-cli": "~3.39.0",
@@ -34,9 +33,7 @@
     "dist/"
   ],
   "scripts": {
-    "build:tokens": "npm run figma:extract && npm run build:stiledictionary",
-    "build:stiledictionary": "node ./build.js",
-    "figma:extract": "node figmaExtractor/figmaTokensExtractor.js",
+    "build": "node ./build.js",
     "lint": "npm run lint:yml && npm run lint:js",
     "lint:js": "eslint ./ --ext .js",
     "lint:yml": "eslint ./ --ext .yml,.yaml",
