--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@commitlint/cli": "~17.0.0",
+    "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "~17.0.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "axios": "~0.27.2",
     "dotenv": "~16.0.0",
     "eslint": "^8.0.1",
@@ -20,7 +20,7 @@
     "lyne-helper-trigger-travis": "~1.0.3",
     "minimist": "~1.2.5",
     "netlify-cli": "~10.3.1",
-    "semantic-release": "~17.4.4",
+    "semantic-release": "~19.0.2",
     "semantic-release-slack-bot": "^3.0.0",
     "shelljs": "~0.8.4",
     "simple-git": "~3.7.1",
