--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "node ./build.js",
     "lint": "npm run lint:yml && npm run lint:js",
-    "lint:js": "eslint ./ --ext .js",
-    "lint:yml": "eslint ./ --ext .yml,.yaml",
+    "lint:js": "eslint --ext .js",
+    "lint:yml": "eslint --ext .yml,.yaml",
     "semantic-release": "semantic-release",
     "prepare": "husky install"
   },
