--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "3.21.0",
   "description": "Managing and publishing design tokens for the lyne design system: https://github.com/lyne-design-system/lyne-components",
   "main": "index.js",
+  "scripts": {
+    "build": "node ./build.js",
+    "lint": "npm run lint:yml && npm run lint:js",
+    "lint:js": "eslint --ext .js",
+    "lint:yml": "eslint --ext .yml,.yaml",
+    "semantic-release": "semantic-release",
+    "prepare": "husky install"
+  },
   "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^17.0.1",
@@ -29,14 +37,6 @@
   "files": [
     "dist/"
   ],
-  "scripts": {
-    "build": "node ./build.js",
-    "lint": "npm run lint:yml && npm run lint:js",
-    "lint:js": "eslint ./ --ext .js",
-    "lint:yml": "eslint ./ --ext .yml,.yaml",
-    "semantic-release": "semantic-release",
-    "prepare": "husky install"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lyne-design-system/lyne-design-tokens.git"
