--- a/.github/actions/yarn-install/action.yml
+++ b/.github/actions/yarn-install/action.yml
@@ -1,14 +1,14 @@
-name: "Installing Yarn dependencies"
-description: "Installs the dependencies using Yarn"
+name: 'Installing Yarn dependencies'
+description: 'Installs the dependencies using Yarn'
 
 runs:
-  using: "composite"
-  steps:  
-    - name: "Yarn: Get cache directory path"
+  using: 'composite'
+  steps:
+    - name: 'Yarn: Get cache directory path'
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn cache dir)"
       shell: bash
-    - name: "Yarn: Restore dependencies from cache"
+    - name: 'Yarn: Restore dependencies from cache'
       uses: actions/cache@v3
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -17,6 +17,6 @@ runs:
         # See: https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows#example-using-the-cache-action.
         key: ${{ runner.os }}-yarn-v1-${{hashFiles('yarn.lock')}}
         restore-keys: ${{ runner.os }}-yarn-v1-
-    - name: "Yarn: Install dependencies"
+    - name: 'Yarn: Install dependencies'
       run: yarn install --frozen-lockfile --non-interactive
       shell: bash
