--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: "weekly"
-    day: "sunday"
-    time: "01:00"
-    timezone: "Europe/Berlin"
-  open-pull-requests-limit: 20
+  - package-ecosystem: npm
+    directory: '/'
+    schedule:
+      interval: 'weekly'
+      day: 'sunday'
+      time: '01:00'
+      timezone: 'Europe/Berlin'
+    open-pull-requests-limit: 20
