refactor: converted code base to typescript and added .d.ts to artifacts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Managing and publishing design tokens for the lyne design system: https://github.com/lyne-design-system/lyne-components",
   "main": "index.js",
   "scripts": {
-    "build": "node ./build.js",
+    "build": "tsx ./build.ts",
     "format": "prettier \"**/*\" --write --ignore-unknown",
     "lint": "npm run lint:yml && npm run lint:js",
     "lint:js": "eslint \"**/*.{js,ts}\"",
@@ -34,23 +34,23 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "axios": "~0.27.2",
-    "dotenv": "~16.0.0",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-yaml": "^0.5.0",
     "husky": "~8.0.1",
     "lint-staged": "^13.0.1",
-    "lodash": "^4.17.15",
-    "lyne-helper-trigger-travis": "~1.0.3",
     "minimist": "~1.2.5",
     "netlify-cli": "~10.5.1",
     "prettier": "2.7.1",
     "semantic-release": "~19.0.2",
     "semantic-release-slack-bot": "^3.0.0",
-    "shelljs": "~0.8.4",
     "simple-git": "~3.7.1",
-    "style-dictionary": "~3.7.0"
+    "style-dictionary": "~3.7.0",
+    "tsx": "^3.4.3",
+    "typescript": "^4.7.3"
   },
   "prettier": {
     "singleQuote": true,
