--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,17 +27,33 @@ jobs:
           node-version: 14
       - name: Yarn Install
         uses: ./.github/actions/yarn-install
-      - name: Download artifacts
-        uses: ./.github/actions/download-artifacts-from-workflow
-        with:
-          artifacts: dist
-      - run: unzip dist.zip
 
-      - name: Create release with semantic-release
-        run: yarn -s semantic-release
+      - name: Run build
+        run: yarn build
+
+      - name: 'Release: Set git user'
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+      - name: 'Release: Create release with standard-version'
+        run: yarn standard-version
+      - name: 'Release: Push release to repository'
+        run: git push --follow-tags origin master
+      - name: 'Release: Determine npm tag'
+        id: npm_tag
+        run: |
+          if [[ "$REF" == *"-"* ]]
+          then
+              echo "::set-output name=npm_tag::next"
+          else
+              echo "::set-output name=npm_tag::latest"
+          fi
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REF: ${{ github.ref }}
+      - name: 'Release: Publish @sbb-esta/lyne-design-tokens'
+        run: yarn publish --tag ${{ steps.npm_tag.outputs.npm_tag }} || true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Install netlify CLI
         run: yarn global add netlify-cli
