--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sbb-esta/lyne-design-tokens",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Managing and publishing design tokens for the lyne design system: https://github.com/lyne-design-system/lyne-components",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "npm run lint:yml && npm run lint:js",
     "lint:js": "eslint \"**/*.{js,ts}\"",
     "lint:yml": "eslint \"**/*.{yml,yaml}\"",
-    "semantic-release": "semantic-release",
     "prepare": "husky install"
   },
   "repository": {
@@ -31,9 +30,6 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "~17.0.0",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
@@ -45,8 +41,8 @@
     "minimist": "~1.2.5",
     "netlify-cli": "~10.5.1",
     "prettier": "2.7.1",
-    "semantic-release": "~19.0.2",
     "simple-git": "~3.7.1",
+    "standard-version": "^9.5.0",
     "style-dictionary": "~3.7.0",
     "tsx": "^3.4.3",
     "typescript": "^4.7.3"
