fix: assign registry and scope for yarn publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
+          registry-url: 'https://registry.npmjs.org'
+          scope: sbb-esta
       - name: Yarn Install
         uses: ./.github/actions/yarn-install
 
