--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
+  "lockFileMaintenance": {
+    "schedule": ["before 7am on monday"],
+    "enabled": true
+  },
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest", "lockFileMaintenance", "bump"],
@@ -19,10 +24,6 @@
     {
       "groupName": "commitlint",
       "matchPackagePrefixes": ["@commitlint/", "standard-version"]
-    },
-    {
-      "matchPackageNames": ["renovate"],
-      "extends": ["schedule:monthly"]
     }
   ]
 }
