--- a/.github/workflows/pr-title-lint.yml
+++ b/.github/workflows/pr-title-lint.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     types: [opened, edited, reopened, unlocked]
 
+permissions: read-all
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -10,9 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - name: 'Yarn: Install'
-        uses: ./.github/actions/yarn-install
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
+      - run: yarn install --frozen-lockfile --non-interactive
 
       - name: 'Lint: Pull request title'
         env:
