--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ on:
     types: [completed]
     branches: [master]
 
+permissions: read-all
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -33,11 +35,11 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
           scope: sbb-esta
-      - name: Yarn Install
-        uses: ./.github/actions/yarn-install
+      - run: yarn install --frozen-lockfile --non-interactive
 
       - name: Run build
         run: yarn build
