--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,4 @@
 {
-  "bootstrap-sha": "72c7c9cfdc5188136a02422cfd85915ee7fb81d2",
+  "last-release-sha": "9af560e588c25f91c17f26f0dbfc21258704c0a6",
   ".": "0.3.9"
 }
