--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -29,7 +29,7 @@ jobs:
 
   release:
     needs: release-please
-    if: ${{ needs.release-please.outputs.releases_created }}
+    if: ${{ needs.release-please.outputs.releases_created !== "false" }}
     runs-on: ubuntu-latest
     env:
       VERSION: ${{ needs.release-please.outputs.version }}
