--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -21,6 +21,8 @@ jobs:
         id: release
         with:
           release-type: node
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
       - name: Release Info
         run: echo "$RELEASE_OUTPUT"
         env:
