--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
+    "sd-tailwindcss-transformer": "1.4.1",
     "style-dictionary": "3.9.2",
+    "tailwindcss": "3.4.1",
     "tsx": "4.7.1",
     "typescript": "5.4.2"
   },
