--- a/package.json
+++ b/package.json
@@ -30,17 +30,10 @@
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/js": "9.0.0",
-    "@eslint/eslintrc": "3.0.2",
     "@types/node": "20.12.6",
-    "@typescript-eslint/eslint-plugin": "7.6.0",
-    "@typescript-eslint/parser": "7.6.0",
     "eslint": "9.0.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard-with-typescript": "43.0.1",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-n": "17.0.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-yaml": "0.5.0",
+    "eslint-plugin-yml": "1.14.0",
     "globals": "15.0.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
