--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,16 +14,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
+          node-version-file: .nvmrc
+          cache: yarn
       - run: yarn install --frozen-lockfile --non-interactive
 
       - name: Run eslint
         run: yarn lint
 
-      - name: 'Integrity: Verify prettier integrity'
+      - name: "Integrity: Verify prettier integrity"
         run: yarn format
-      - name: 'Integrity: Assert no changes (run `yarn format` if this fails)'
+      - name: "Integrity: Assert no changes (run `yarn format` if this fails)"
         run: git diff --exit-code
 
   build:
@@ -33,8 +33,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
+          node-version-file: .nvmrc
+          cache: yarn
       - run: yarn install --frozen-lockfile --non-interactive
 
       - name: Run build
