--- a/.github/workflows/pr-title-lint.yml
+++ b/.github/workflows/pr-title-lint.yml
@@ -12,15 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
+          node-version-file: .nvmrc
+          cache: yarn
       - run: yarn install --frozen-lockfile --non-interactive
 
-      - name: 'Lint: Pull request title'
+      - name: "Lint: Pull request title"
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: echo "$PR_TITLE" | yarn commitlint
 
-      - name: 'Warning: Pull request title must match conventional commits pattern!'
+      - name: "Warning: Pull request title must match conventional commits pattern!"
         if: ${{ failure() }}
         run: echo "Pull request title must match conventional commits pattern!"
