--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Run eslint
         run: yarn lint
 
-      - name: "Integrity: Verify prettier integrity"
+      - name: 'Integrity: Verify prettier integrity'
         run: yarn format
-      - name: "Integrity: Assert no changes (run `yarn format` if this fails)"
+      - name: 'Integrity: Assert no changes (run `yarn format` if this fails)'
         run: git diff --exit-code
 
   build:
