--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
       "sass": "./dist/scss/sbb-variables.scss",
       "node": "./dist/js/sbb-tokens.mjs",
       "require": "./dist/js/sbb-tokens.cjs",
-      "default": "./dist/js/sbb-tokens.mjs",
-      "style": "./dist/sbb-variables.css"
+      "style": "./dist/sbb-variables.css",
+      "default": "./dist/js/sbb-tokens.mjs"
     },
     "./dist/js/*": {
       "default": "./dist/js/*"
