--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,9 @@
   "include-component-in-tag": false,
   "packages": {
     ".": {
-      "changelog-path": "CHANGELOG.md"
+      "changelog-path": "CHANGELOG.md",
+      "versioning": "prerelease",
+      "prerelease-type": "next"
     }
   }
 }
