--- a/package.json
+++ b/package.json
@@ -37,23 +37,18 @@
     "lint-staged": "16.2.6",
     "prettier": "3.6.2",
     "sass": "1.93.3",
-    "style-dictionary": "3.9.2",
+    "style-dictionary": "5.1.1",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
     "typescript-eslint": "8.46.3"
   },
-  "main": "./dist/js/sbb-tokens.cjs",
-  "module": "./dist/js/sbb-tokens.mjs",
-  "typings": "./dist/js/sbb-tokens.d.ts",
   "type": "module",
   "exports": {
     ".": {
       "types": "./dist/js/sbb-tokens.d.ts",
       "sass": "./dist/scss/sbb-variables.scss",
-      "node": "./dist/js/sbb-tokens.mjs",
-      "require": "./dist/js/sbb-tokens.cjs",
       "style": "./dist/sbb-variables.css",
-      "default": "./dist/js/sbb-tokens.mjs"
+      "default": "./dist/js/sbb-tokens.js"
     },
     "./dist/js/*": {
       "default": "./dist/js/*"
