chore: release 2.0.0 preparation
Release-As: 2.0.0

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,9 +4,7 @@
   "include-component-in-tag": false,
   "packages": {
     ".": {
-      "changelog-path": "CHANGELOG.md",
-      "versioning": "prerelease",
-      "prerelease-type": "next"
+      "changelog-path": "CHANGELOG.md"
     }
   }
 }
